@@ -32,7 +32,7 @@ But if you don't currently have PDTB v2, please stop here or purchase a copy of 
         4. Run "xmllint" to check the final XML files against the PDTB-XML schemata.
         5. (Optional) Run GraphViz and Saxon to produce pictures.
 
-        The final output is around 700-800 MB. With pictures it's 2.3 GB.
+        The output is around 700-800 MB. With pictures it's 6.0 GB. This includes a lot of intermediate files. The final and pure PDTB-XML files are about 373 MB.
 
     File Format
 
@@ -40,7 +40,7 @@ But if you don't currently have PDTB v2, please stop here or purchase a copy of 
         
     Graphic User Interface
 
-        Some static, dumb and even ugly pictures can be generated for every discourse relation if you really want to see them (this process could take a long time!). This is (probably) the final support for GUI. Since every user of pdtb-xml also has the original PDTB API/Browser, which can display the relations better, no more time should be put on reinventing a GUI.
+        Some static, dumb and even ugly pictures can be generated for every discourse relation if you really want to see them (this process could take 10 hours!). This is (probably) the final support for GUI. Since every user of pdtb-xml also has the original PDTB API/Browser, which can display the relations better, no more time should be put on reinventing a GUI.
 
     License
 
